docs(readme): rewrite README with polished professional layout, feature highlights, and platform matrix