@@ -1,12 +1,12 @@
 <div align="center">
-  <img src="assets/logo.svg" alt="Kromium Logo" width="88" height="88" />
+  <img src="assets/logo.svg" alt="Kromium Logo" width="96" height="96" />
   <br />
   <picture>
     <source media="(prefers-color-scheme: dark)" srcset="assets/brand-dark.svg">
     <source media="(prefers-color-scheme: light)" srcset="assets/brand.svg">
-    <img alt="Kromium" src="assets/brand.svg" width="280">
+    <img alt="Kromium" src="assets/brand.svg" width="300">
   </picture>
-  <p><strong>Embed Modern Web Capabilities in Compose Multiplatform Desktop &amp; Kotlin JVM</strong></p>
+  <p><strong>Modern Chromium Embedded Framework for Compose Multiplatform Desktop &amp; Kotlin JVM</strong></p>
 
   <p>
     <a href="https://central.sonatype.com/artifact/dev.daviante/kromium-compose"><img src="https://img.shields.io/badge/Maven_Central-v1.2.150--b11-107c41?style=flat-square&logo=apachemaven" alt="Maven Central" /></a>
@@ -14,38 +14,51 @@
     <a href="https://kotlinlang.org"><img src="https://img.shields.io/badge/Kotlin-2.1.10-7F52FF?style=flat-square&logo=kotlin" alt="Kotlin" /></a>
     <a href="https://www.jetbrains.com/lp/compose-multiplatform/"><img src="https://img.shields.io/badge/Compose_Desktop-1.7.3-4285F4?style=flat-square&logo=jetpackcompose" alt="Compose Multiplatform" /></a>
     <a href="LICENSE"><img src="https://img.shields.io/badge/License-Apache_2.0-5c2d91?style=flat-square" alt="License" /></a>
+    <img src="https://img.shields.io/badge/Platform-Windows%20%7C%20macOS%20%7C%20Linux-24292e?style=flat-square" alt="Platforms" />
   </p>
 </div>
 
 ---
 
-**Kromium** is an open-source, production-grade Chromium Embedded Framework (CEF) library tailored specifically for **Compose Multiplatform Desktop** and **Kotlin JVM** applications across Windows, macOS, and Linux.
+**Kromium** is an open-source, production-grade Chromium Embedded Framework (CEF) library built specifically for **Compose Multiplatform Desktop** and **Kotlin JVM** applications across Windows, macOS, and Linux.
 
-Powered by standard **CEF 150** without third-party wrappers, Kromium delivers zero-config automated engine downloads from JetBrains Runtime releases, hardware-accelerated 120 FPS rendering, coroutine-based JavaScript bridges, suspendable cookie managers, network request interception, and a first-class declarative `@Composable KromiumView`.
+Backed by standard **Chromium Embedded Framework (CEF 150)** and the battle-tested JetBrains JCEF runtime, Kromium delivers zero-bloat automated engine installation, hardware-accelerated rendering, coroutine-based JavaScript bridges, asynchronous cookie management, enterprise network proxying, and a declarative `@Composable KromiumView`.
 
-> [!NOTE]
-> **Explore the Online Portal**: An interactive documentation portal with live Compose simulators, full API browser, and search is available at **[kromium.daviante.dev](https://kromium.daviante.dev)**.
+> [!TIP]
+> **Explore the Interactive Documentation Portal**: Visit **[kromium.daviante.dev](https://kromium.daviante.dev)** for interactive guides, API search, and live demos.
 
 ---
 
-## 📚 Complete Documentation Hub
+## 🌟 Why Kromium?
 
-Detailed, categorized guides covering every subsystem are available in the **[`docs/`](docs/)** directory:
+* 🚀 **Zero-Bloat On-Demand Bootstrapping**: Ship lightweight 15–30MB desktop installers. Kromium downloads, verifies (SHA-256), and caches the native platform JCEF runtime upon first launch.
+* 🎨 **First-Class Compose Multiplatform UI**: Declarative `@Composable KromiumView` integrated with Compose Desktop's layout, lifecycle, and state system.
+* 🛡️ **Zero Telemetry & Registry Protection**: Automated suppression of Windows Registry modifications, Crashpad crash reporters, Omaha updates, toast notifications, and telemetry.
+* 🏢 **Enterprise & SMB Proxy Architecture**: Full support for PAC scripts, WPAD auto-discovery, HTTPS TLS tunnels, SOCKS5 remote DNS leak protection, Multi-Protocol split routing, NTLM/Kerberos SSO, and **dynamic runtime proxy switching**.
+* ☕ **Zero JVM Module Configuration**: Dynamic module opening at engine boot eliminates manual `--add-opens` flags on Java 17, 21, and 23+.
+* 🤖 **Zero-Dependency Headless Automation**: Run full-featured background web scraping and automation without fragile OpenGL/JOGL dependencies.
+* ⚖️ **100% Royalty-Free & Apache 2.0 Licensed**: Open-source, compliant with patent guidelines, and free from commercial MPEG LA licensing encumbrances.
 
-| Category | Guides & References | Topic Highlights |
+---
+
+## 📚 Documentation Hub
+
+Complete, in-depth documentation organized according to the **Diátaxis framework** is available in the **[`docs/`](docs/)** directory:
+
+| Section | Guides & References | Key Topics |
 |:---|:---|:---|
-| **🚀 Getting Started** | [Installation](docs/getting-started/installation.md) &bull; [Compose Quickstart](docs/getting-started/quickstart-compose.md) &bull; [Swing JVM Quickstart](docs/getting-started/quickstart-jvm.md) | Gradle KMP setup, Maven Central, first browser window, and dynamic JVM module opening. |
-| **🏛️ Core Concepts** | [Architecture](docs/core-concepts/architecture.md) &bull; [State & Lifecycle](docs/core-concepts/state-and-lifecycle.md) &bull; [Security & Privacy](docs/core-concepts/security-and-privacy.md) | JCEF bootstrap, multi-process Chromium model, `KromiumState` flow, and Windows Registry suppression. |
-| **📖 Guides** | [Compose UI](docs/guides/compose-ui.md) &bull; [Navigation](docs/guides/navigation-and-history.md) &bull; [JavaScript Bridge](docs/guides/javascript-and-dom.md) &bull; [Network & Proxies](docs/guides/network-and-proxies.md) | In-depth tutorials: tabs, JS evaluation, DOM queries, enterprise proxies (PAC/WPAD/SSO), and dynamic switching. |
-| **📖 Guides (Cont.)** | [Asset Filtering](docs/guides/asset-filtering-and-security.md) &bull; [Cookies](docs/guides/cookie-management.md) &bull; [Downloads & Dialogs](docs/guides/downloads-and-dialogs.md) &bull; [Headless](docs/guides/headless-and-automation.md) | Ad blocking, host locking, async cookie store, downloads, JS alerts, and zero-dependency Swing peer headless mode. |
-| **📚 API Reference** | [Configuration](docs/reference/configuration.md) &bull; [Browser & Client API](docs/reference/browser-and-client-api.md) &bull; [Handlers](docs/reference/handlers-and-events.md) &bull; [Exceptions](docs/reference/exceptions-and-logging.md) | Full signatures for `KromiumConfig`, `KromiumBrowser`, `KromiumClient`, composite multiplexers, and exceptions. |
-| **📦 Deployment** | [Packaging & Distribution](docs/deployment/packaging-and-distribution.md) &bull; [Platform Specifics](docs/deployment/platform-specifics.md) &bull; [Troubleshooting & FAQ](docs/deployment/troubleshooting-and-faq.md) | Conveyor/jpackage bundling, macOS framework symlinks, Linux shared libs, and GPU blank screen fixes. |
+| **🚀 Getting Started** | [Installation](docs/getting-started/installation.md)<br/>[Compose Quickstart](docs/getting-started/quickstart-compose.md)<br/>[Swing JVM Quickstart](docs/getting-started/quickstart-jvm.md) | Gradle dependencies, repository setup, first browser window, and dynamic JVM module opening. |
+| **🏛️ Core Concepts** | [Architecture](docs/core-concepts/architecture.md)<br/>[State & Lifecycle](docs/core-concepts/state-and-lifecycle.md)<br/>[Security & Privacy](docs/core-concepts/security-and-privacy.md) | Bootstrap pipeline, multi-process Chromium architecture, `KromiumState` flow, and registry suppression. |
+| **📖 Guides** | [Compose UI Integration](docs/guides/compose-ui.md)<br/>[Navigation & History](docs/guides/navigation-and-history.md)<br/>[JavaScript & DOM](docs/guides/javascript-and-dom.md)<br/>[Network & Proxies](docs/guides/network-and-proxies.md) | Multi-tab UI, navigation controls, coroutine JS execution, IPC routers, and enterprise proxy configuration. |
+| **📖 Guides (Cont.)** | [Asset Filtering](docs/guides/asset-filtering-and-security.md)<br/>[Cookie Management](docs/guides/cookie-management.md)<br/>[Downloads & Dialogs](docs/guides/downloads-and-dialogs.md)<br/>[Headless & Automation](docs/guides/headless-and-automation.md) | Ad blocking, host locking, async cookie store, downloads, modal dialogs, and off-screen headless scraping. |
+| **📋 API Reference** | [Configuration (`KromiumConfig`)](docs/reference/configuration.md)<br/>[Browser & Client API](docs/reference/browser-and-client-api.md)<br/>[Handlers & Events](docs/reference/handlers-and-events.md)<br/>[Exceptions & Logging](docs/reference/exceptions-and-logging.md) | Complete property catalogs, method signatures, composite multiplexers, and pluggable logging. |
+| **📦 Deployment** | [Packaging & Distribution](docs/deployment/packaging-and-distribution.md)<br/>[Platform Considerations](docs/deployment/platform-specifics.md)<br/>[Troubleshooting & FAQ](docs/deployment/troubleshooting-and-faq.md) | Desktop installers (MSI, DMG, DEB), ProGuard/R8 rules, macOS framework symlinks, and Linux dependencies. |
 
 Visit the master sitemap at **[`docs/README.md`](docs/README.md)**.
 
 ---
 
-## 🏗️ Architecture at a Glance
+## 🏗️ Architecture
 
 ```
 ┌─────────────────────────────────────────────────────────────────┐
@@ -65,8 +78,8 @@ Visit the master sitemap at **[`docs/README.md`](docs/README.md)**.
                                  ▼
                      ┌───────────────────────┐
                      │   Kromium Singleton   │
-                     │  (StateFlow lifecycle,│
-                     │   Mutex-safe startup) │
+                     │ (StateFlow lifecycle, │
+                     │  Mutex-safe startup)  │
                      └───────────┬───────────┘
                                  ▼
                      ┌───────────────────────┐
@@ -92,18 +105,44 @@ Visit the master sitemap at **[`docs/README.md`](docs/README.md)**.
 
 ## 📦 Modules
 
-```
-kromium/
-├── kromium-core       // Pure Kotlin/JVM engine, downloader, JCEF lifecycle, cookies, and network
-├── kromium-compose    // Compose Multiplatform desktop UI integration (KromiumView)
-└── kromium-demo       // Showcase browser app with tabs, DevTools workbench, and JS REPL
-```
+* **`dev.daviante:kromium-compose`**: Declarative `@Composable KromiumView`, `KromiumViewState`, and Compose multi-tab helpers. (Includes `kromium-core` transitively).
+* **`dev.daviante:kromium-core`**: Core engine coordination, dynamic JCEF downloader, `KromiumBrowser`, `KromiumClient`, cookie management, network interception, and headless automation.
+* **`kromium-demo`**: Complete showcase desktop browser with multi-tab browsing, DevTools, REPL, and settings.
 
 ---
 
 ## 📥 Installation
 
-Add the desired module to your `build.gradle.kts`:
+Add the dependency to your `build.gradle.kts`:
+
+### Compose Multiplatform Desktop
+
+```kotlin
+repositories {
+    mavenCentral()
+    google()
+    maven("https://maven.pkg.jetbrains.space/public/p/compose/dev")
+}
+
+kotlin {
+    jvm("desktop")
+    sourceSets {
+        val desktopMain by getting {
+            dependencies {
+                implementation(compose.desktop.currentOs)
+                // Kromium Compose Multiplatform bindings
+                implementation("dev.daviante:kromium-compose:1.2.150-b11")
+
+                // Coroutines
+                implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.9.0")
+                implementation("org.jetbrains.kotlinx:kotlinx-coroutines-swing:1.9.0")
+            }
+        }
+    }
+}
+```
+
+### Pure Kotlin JVM / Java Swing (Without Compose)
 
 ```kotlin
 repositories {
@@ -111,11 +150,8 @@ repositories {
 }
 
 dependencies {
-    // For Compose Multiplatform Desktop applications:
-    implementation("dev.daviante:kromium-compose:1.2.150-b11")
-
-    // Or for standalone Kotlin JVM / Swing / Headless applications:
-    // implementation("dev.daviante:kromium-core:1.2.150-b11")
+    implementation("dev.daviante:kromium-core:1.2.150-b11")
+    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.9.0")
 }
 ```
 
@@ -124,23 +160,23 @@ dependencies {
 ## ⚡ Quick Start
 
 ### 1. Initialize the Engine
-Initialize Kromium once in your application startup before rendering any UI:
+Call `Kromium.initialize()` once during application startup before rendering UI:
 
 ```kotlin
 import dev.daviante.kromium.presentation.browser.Kromium
 
 suspend fun main() {
     Kromium.initialize {
-        // Hardware-accelerated windowed rendering (default: false)
-        windowlessRendering = false
+        // Suppresses Windows Registry modifications and telemetry (default: true)
+        blockRegistryAndTelemetry = true
         
-        // Optional: enable DevTools remote debugging port
+        // Optional: Remote Chrome DevTools port (0 = disabled)
         remoteDebuggingPort = 9222
     }
 }
 ```
 
-Monitor download and bootstrap progress reactively using `Kromium.state`:
+Monitor engine download and bootstrap progress reactively:
 
 ```kotlin
 val state by Kromium.state.collectAsState()
@@ -148,14 +184,14 @@ val state by Kromium.state.collectAsState()
 when (val s = state) {
     is KromiumState.Downloading -> Text("Downloading Chromium: ${s.progress.percentage}%")
     is KromiumState.Extracting -> Text("Extracting runtime binaries...")
-    is KromiumState.Initializing -> Text("Bootstrapping Chromium...")
+    is KromiumState.Initializing -> Text("Bootstrapping Chromium engine...")
     is KromiumState.Ready -> Text("Engine ready!")
-    is KromiumState.Error -> Text("Failed to load engine: ${s.cause.message}")
+    is KromiumState.Error -> Text("Initialization error: ${s.cause.message}")
     else -> {}
 }
 ```
 
-### 2. Render Web Content in Compose Desktop
+### 2. Embed Web Content in Compose Desktop
 
 ```kotlin
 import androidx.compose.foundation.layout.*
@@ -170,7 +206,7 @@ fun BrowserScreen() {
     val state = rememberKromiumState(initialUrl = "https://github.com/daviantegroup/kromium")
 
     Column(modifier = Modifier.fillMaxSize()) {
-        // Navigation toolbar
+        // Navigation Bar
         Row {
             Button(onClick = { state.goBack() }, enabled = state.canGoBack) { Text("Back") }
             Button(onClick = { state.goForward() }, enabled = state.canGoForward) { Text("Forward") }
@@ -178,7 +214,7 @@ fun BrowserScreen() {
             Button(onClick = { state.openDevTools() }) { Text("DevTools") }
         }
 
-        // Web view surface
+        // Native Browser Rendering Surface
         KromiumView(
             state = state,
             modifier = Modifier.fillMaxSize()
@@ -189,10 +225,12 @@ fun BrowserScreen() {
 
 ---
 
-## ✨ Feature Highlights
+## 💡 Feature Highlights
 
 ### 🍪 Coroutine Cookie Management
 ```kotlin
+import dev.daviante.kromium.presentation.network.KromiumCookieManager
+
 // Retrieve all cookies for a domain
 val cookies: Map<String, String> = KromiumCookieManager.getCookies("https://example.com")
 
@@ -209,80 +247,80 @@ KromiumCookieManager.setCookie(
 KromiumCookieManager.clearCookies()
 ```
 
-### 🌐 Request & Header Interception
+### 🌐 Network Request Interception & Security
 ```kotlin
+import dev.daviante.kromium.presentation.network.KromiumRequestInterceptor
+
 state.requestInterceptor = KromiumRequestInterceptor { request ->
-    // Block tracking scripts
+    // 1. Block tracking scripts & ads
     if (request.url.contains("doubleclick.net")) {
-        return@KromiumRequestInterceptor true
+        return@KromiumRequestInterceptor true // Cancel request
     }
-    // Inject custom authorization headers
+    // 2. Inject custom authentication headers
     request.headers["Authorization"] = "Bearer my-secret-token"
     false // Allow request to proceed
 }
 ```
 
-### 🔗 Navigation Overrides (OAuth & Deep Links)
+### 🏢 Enterprise Proxies & Dynamic Runtime Switching
 ```kotlin
-state.shouldOverrideUrlLoading = { url ->
-    if (url.startsWith("myapp://oauth-callback")) {
-        handleOAuthToken(url)
-        true // Intercept and cancel browser navigation
-    } else {
-        false // Let browser navigate normally
-    }
-}
+import dev.daviante.kromium.domain.config.KromiumProxy
+
+// Switch proxy at runtime across all active browsers without restarting:
+Kromium.setProxy(
+    KromiumProxy.Http(
+        host = "proxy.corp.internal",
+        port = 8080,
+        username = "domain\\user",
+        password = "SecurePassword",
+        bypassList = listOf("<local>", "127.0.0.1", "*.internal.corp")
+    )
+)
 ```
 
-### 📥 File Downloads & Manager
+### 📄 Suspending JavaScript & DOM Extraction
 ```kotlin
-// Set download target directory
-state.downloadDirectory = File(System.getProperty("user.home"), "Downloads")
+coroutineScope.launch {
+    // Evaluate arbitrary JavaScript asynchronously
+    val pageTitle: String? = state.evaluateJavaScript("document.title")
 
-// Listen for download progress updates
-state.onDownload = { item ->
-    println("Downloading ${item.suggestedFileName}: ${item.percentComplete}% (${item.speed / 1024} KB/s)")
+    // Extract outer HTML of current frame
+    val html: String = state.getHtml()
+
+    // Extract visible plain text
+    val plainText: String = state.getText()
 }
-
-// Programmatically trigger downloads
-state.startDownload("https://example.com/latest-release.zip")
-```
-
-### 📄 Extracting DOM & Executing JavaScript
-```kotlin
-// Run custom JavaScript asynchronously and get the result
-val title = state.evaluateJavaScript("document.title")
-
-// Extract complete page HTML
-val html = state.getHtml()
-
-// Extract visible text content
-val text = state.getText()
 ```
 
 ### 📸 Screenshots & PDF Printing
 ```kotlin
 // Capture an in-memory BufferedImage screenshot
 val screenshot: BufferedImage? = browser.takeScreenshot()
+if (screenshot != null) {
+    ImageIO.write(screenshot, "PNG", File("page.png"))
+}
 
-// Print page to a PDF file
-browser.printToPdf("C:/Reports/page.pdf")
+// Export page to a vectorized PDF
+browser.printToPdf("report.pdf")
 ```
 
 ---
 
-## 🤖 AI Coding Agent Feeds
+## 💻 Supported Platforms & Systems
 
-If you are developing with autonomous AI coding agents (Cursor, Claude Code, GitHub Copilot), direct plain-text documentation endpoints adhering to the `llmstxt.org` specification are available:
+| Operating System | Architectures | Minimum Version | Prerequisites |
+|:---|:---|:---|:---|
+| **Windows** | x64 (64-bit) | Windows 10 / 11, Server 2019+ | [Visual C++ 2015–2022 Redistributable](https://aka.ms/vs/17/release/vc_redist.x64.exe) |
+| **macOS** | ARM64 (Apple Silicon) & Intel x64 | macOS 11.0 (Big Sur)+ | None *(Universal binaries resolved automatically)* |
+| **Linux** | x64 & ARM64 | Ubuntu 20.04+, Debian 11+, Fedora 36+ | Standard desktop X11/GTK libraries (`libnss3`, `libasound2`, `libdrm2`) |
 
-- **[llms.txt (Quickstart & Index)](https://kromium.daviante.dev/llms.txt)**: Fast-loading index and API definitions.
-- **[llms-full.txt (Full Concatenated Docs)](https://kromium.daviante.dev/llms-full.txt)**: 40KB single-file complete documentation of all 26 articles.
+*Minimum Java Runtime: **Java 17 LTS** (Java 21 LTS Recommended).*
 
 ---
 
 ## 🚀 Running the Showcase Demo
 
-The repository includes a ready-to-run showcase desktop browser application in `:kromium-demo` illustrating multi-tab navigation, custom dialogs, asynchronous JavaScript evaluation, cookie inspection, live canvas rendering, and developer tools:
+The repository includes a ready-to-run desktop browser application demonstrating multi-tab navigation, custom dialogs, live canvas rendering, and developer tools:
 
 ```bash
 ./gradlew :kromium-demo:run
@@ -290,11 +328,20 @@ The repository includes a ready-to-run showcase desktop browser application in `
 
 ---
 
-## 🛡️ Zero Telemetry & Security
+## 🤖 AI Coding Agent Endpoints
 
-Kromium strictly guarantees **Zero Built-In Telemetry**. All Google metrics collection, crash reporting (`crashpad`), and background diagnostic pings are disabled at engine boot.
+For developers and teams using autonomous AI coding assistants (Cursor, Claude Code, GitHub Copilot), plain-text documentation feeds conforming to the `llmstxt.org` specification are available:
 
-Security vulnerabilities should be reported responsibly in accordance with our [Security Policy](SECURITY.md).
+* **[llms.txt (Quickstart & Index)](https://kromium.daviante.dev/llms.txt)**: Fast-loading index and API definitions.
+* **[llms-full.txt (Full Concatenated Docs)](https://kromium.daviante.dev/llms-full.txt)**: Comprehensive single-file documentation reference.
+
+---
+
+## 🛡️ Security & Responsible Disclosure
+
+Kromium strictly guarantees **Zero Built-In Telemetry**. All Google metrics reporting, crash dumps (`crashpad`), and diagnostic ping services are suppressed at engine boot.
+
+Please report security vulnerabilities in accordance with our [Security Policy](SECURITY.md).
 
 ---
 
@@ -308,4 +355,10 @@ you may not use this file except in compliance with the License.
 You may obtain a copy of the License at
 
     http://www.apache.org/licenses/LICENSE-2.0
+
+Unless required by applicable law or agreed to in writing, software
+distributed under the License is distributed on an "AS IS" BASIS,
+WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+See the License for the specific language governing permissions and
+limitations under the License.
 ```
